crates/escalier_parser/src/snapshots/escalier_parser__expr_parser__tests__parse_literals-6.snap
---
source: crates/escalier_parser/src/expr_parser.rs
expression: "parse(r#\"\"hello\"\"#)"
---
Expr {
    kind: Str(
        Str {
            span: 0..7,
            value: "hello",
        },
    ),
    span: 0..7,
    inferred_type: None,
}
