crates/escalier_parser/src/snapshots/escalier_parser__expr_parser__tests__parse_literals.snap
---
source: crates/escalier_parser/src/expr_parser.rs
expression: "parse(\"123\")"
---
Expr {
    kind: Num(
        Num {
            value: "123",
        },
    ),
    span: 0..3,
    inferred_type: None,
}
