crates/escalier_parser/src/snapshots/escalier_parser__expr_parser__tests__parse_member_access-3.snap
---
source: crates/escalier_parser/src/expr_parser.rs
expression: "parse(\"a[b][c]\")"
---
Index(
    Index {
        span: 0..6,
        left: Index(
            Index {
                span: 0..3,
                left: Ident(
                    Ident {
                        name: "a",
                        span: 0..1,
                    },
                ),
                right: Ident(
                    Ident {
                        name: "b",
                        span: 2..3,
                    },
                ),
            },
        ),
        right: Ident(
            Ident {
                name: "c",
                span: 5..6,
            },
        ),
    },
)
