crates/escalier_parser/src/snapshots/escalier_parser__expr_parser__tests__parse_member_access.snap
---
source: crates/escalier_parser/src/expr_parser.rs
expression: "parse(\"a.b.c\")"
---
Expr {
    kind: Member(
        Member {
            object: Expr {
                kind: Member(
                    Member {
                        object: Expr {
                            kind: Ident(
                                Ident {
                                    name: "a",
                                    span: 0..1,
                                },
                            ),
                            span: 0..1,
                            inferred_type: None,
                        },
                        property: Expr {
                            kind: Ident(
                                Ident {
                                    name: "b",
                                    span: 2..3,
                                },
                            ),
                            span: 2..3,
                            inferred_type: None,
                        },
                    },
                ),
                span: 0..3,
                inferred_type: None,
            },
            property: Expr {
                kind: Ident(
                    Ident {
                        name: "c",
                        span: 4..5,
                    },
                ),
                span: 4..5,
                inferred_type: None,
            },
        },
    ),
    span: 0..5,
    inferred_type: None,
}
