crates/escalier_parser/src/snapshots/escalier_parser__expr_parser__tests__parse_nested_function_call.snap
---
source: crates/escalier_parser/src/expr_parser.rs
expression: parse(src)
---
Expr {
    kind: Call {
        args: [
            Expr {
                kind: Call {
                    args: [
                        Expr {
                            kind: Identifier(
                                "x",
                            ),
                            loc: SourceLocation {
                                start: Position {
                                    line: 1,
                                    column: 9,
                                },
                                end: Position {
                                    line: 1,
                                    column: 10,
                                },
                            },
                        },
                        Expr {
                            kind: Number(
                                "5",
                            ),
                            loc: SourceLocation {
                                start: Position {
                                    line: 1,
                                    column: 12,
                                },
                                end: Position {
                                    line: 1,
                                    column: 13,
                                },
                            },
                        },
                    ],
                    callee: Expr {
                        kind: Identifier(
                            "add",
                        ),
                        loc: SourceLocation {
                            start: Position {
                                line: 1,
                                column: 5,
                            },
                            end: Position {
                                line: 1,
                                column: 8,
                            },
                        },
                    },
                },
                loc: SourceLocation {
                    start: Position {
                        line: 1,
                        column: 5,
                    },
                    end: Position {
                        line: 1,
                        column: 14,
                    },
                },
            },
            Expr {
                kind: Call {
                    args: [
                        Expr {
                            kind: Identifier(
                                "y",
                            ),
                            loc: SourceLocation {
                                start: Position {
                                    line: 1,
                                    column: 20,
                                },
                                end: Position {
                                    line: 1,
                                    column: 21,
                                },
                            },
                        },
                        Expr {
                            kind: Number(
                                "10",
                            ),
                            loc: SourceLocation {
                                start: Position {
                                    line: 1,
                                    column: 23,
                                },
                                end: Position {
                                    line: 1,
                                    column: 25,
                                },
                            },
                        },
                    ],
                    callee: Expr {
                        kind: Identifier(
                            "sub",
                        ),
                        loc: SourceLocation {
                            start: Position {
                                line: 1,
                                column: 16,
                            },
                            end: Position {
                                line: 1,
                                column: 19,
                            },
                        },
                    },
                },
                loc: SourceLocation {
                    start: Position {
                        line: 1,
                        column: 16,
                    },
                    end: Position {
                        line: 1,
                        column: 26,
                    },
                },
            },
        ],
        callee: Expr {
            kind: Identifier(
                "mul",
            ),
            loc: SourceLocation {
                start: Position {
                    line: 1,
                    column: 1,
                },
                end: Position {
                    line: 1,
                    column: 4,
                },
            },
        },
    },
    loc: SourceLocation {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 27,
        },
    },
}
