crates/escalier_parser/src/snapshots/escalier_parser__expr_parser__tests__parse_object_literals-2.snap
---
source: crates/escalier_parser/src/expr_parser.rs
expression: "parse(\"{ a: 1 }\")"
---
Expr {
    kind: Object {
        properties: [
            (
                Identifier(
                    "a",
                ),
                Expr {
                    kind: Literal(
                        Number(
                            "1",
                        ),
                    ),
                    loc: SourceLocation {
                        start: Position {
                            line: 1,
                            column: 6,
                        },
                        end: Position {
                            line: 1,
                            column: 7,
                        },
                    },
                },
            ),
        ],
    },
    loc: SourceLocation {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 9,
        },
    },
}
