crates/escalier_parser/src/snapshots/escalier_parser__expr_parser__tests__parse_object_literals-3.snap
---
source: crates/escalier_parser/src/expr_parser.rs
expression: "parse(\"{ a: 1, b: 2 }\")"
---
Expr {
    kind: Object {
        properties: [
            Prop(
                Property {
                    key: Identifier(
                        "a",
                    ),
                    value: Expr {
                        kind: Literal(
                            Number(
                                "1",
                            ),
                        ),
                        loc: SourceLocation {
                            start: Position {
                                line: 1,
                                column: 6,
                            },
                            end: Position {
                                line: 1,
                                column: 7,
                            },
                        },
                    },
                },
            ),
            Prop(
                Property {
                    key: Identifier(
                        "b",
                    ),
                    value: Expr {
                        kind: Literal(
                            Number(
                                "2",
                            ),
                        ),
                        loc: SourceLocation {
                            start: Position {
                                line: 1,
                                column: 12,
                            },
                            end: Position {
                                line: 1,
                                column: 13,
                            },
                        },
                    },
                },
            ),
        ],
    },
    loc: SourceLocation {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 15,
        },
    },
}
