crates/escalier_parser/src/snapshots/escalier_parser__expr_parser__tests__parse_object_literals-4.snap
---
source: crates/escalier_parser/src/expr_parser.rs
expression: "parse(\"{ a: 1, b: 2, }\")"
---
Expr {
    kind: Object(
        Object {
            properties: [
                Prop(
                    Property {
                        key: Ident(
                            Ident {
                                name: "a",
                                span: 2..3,
                            },
                        ),
                        value: Expr {
                            kind: Num(
                                Num {
                                    value: "1",
                                },
                            ),
                            span: 5..6,
                            inferred_type: None,
                        },
                    },
                ),
                Prop(
                    Property {
                        key: Ident(
                            Ident {
                                name: "b",
                                span: 8..9,
                            },
                        ),
                        value: Expr {
                            kind: Num(
                                Num {
                                    value: "2",
                                },
                            ),
                            span: 11..12,
                            inferred_type: None,
                        },
                    },
                ),
            ],
        },
    ),
    span: 0..15,
    inferred_type: None,
}
