crates/escalier_parser/src/snapshots/escalier_parser__expr_parser__tests__parse_object_literals-6.snap
---
source: crates/escalier_parser/src/expr_parser.rs
expression: "parse(\"{ a: 1, b: 2, ...c }\")"
---
Expr {
    kind: Object {
        properties: [
            Prop(
                Property {
                    key: Identifier(
                        "a",
                    ),
                    value: Expr {
                        kind: Literal(
                            Number(
                                "1",
                            ),
                        ),
                        span: 5..6,
                    },
                },
            ),
            Prop(
                Property {
                    key: Identifier(
                        "b",
                    ),
                    value: Expr {
                        kind: Literal(
                            Number(
                                "2",
                            ),
                        ),
                        span: 11..12,
                    },
                },
            ),
            Spread(
                Expr {
                    kind: Identifier(
                        "c",
                    ),
                    span: 17..18,
                },
            ),
        ],
    },
    span: 0..20,
}
